# Tarefa04_Webserver

./: CMakeLists.txt  README.md  monitoramento_rios.c  webserver.c
inc/: ssd1306.c
